--- a/step.yml
+++ b/step.yml
@@ -11,7 +11,10 @@ title: |-
   cocoapods-dependency-checker
 summary: |
 description: |
-  Uses jeremylong/DependencyCheck to search Podfile.lock for CVE vulnerabilites
+  Uses jeremylong/DependencyCheck to search Podfile.lock for CVE vulnerabilites.
+
+  The generated HTML document will be placed into BITRISE_DEPLOY_DIR by default.
+  Remember to add the Deploy to bitrise.io in order to persist artifacts.
 website: https://github.com/johnjcsmith/bitrise-step-dependency-checker-cocoapods
 source_code_url: https://github.com/johnjcsmith/bitrise-step-dependency-checker-podfile_lock_path
 support_url: https://github.com/johnjcsmith/bitrise-step-dependency-checker-cocoapods/issues
