Updates summary text

--- a/step.yml
+++ b/step.yml
@@ -15,7 +15,7 @@ description: |
   Uses jeremylong/DependencyCheck to search Podfile.lock for CVE vulnerabilites.
 
   The generated HTML document will be placed into BITRISE_DEPLOY_DIR by default.
-  Remember to add the Deploy to bitrise.io in order to persist artifacts.
+  Remember to run the "Deploy to bitrise.io" step in order to persist artifacts.
 website: https://github.com/johnjcsmith/bitrise-step-dependency-checker-cocoapods
 source_code_url: https://github.com/johnjcsmith/bitrise-step-dependency-checker-podfile_lock_path
 support_url: https://github.com/johnjcsmith/bitrise-step-dependency-checker-cocoapods/issues
