--- a/bitrise.yml
+++ b/bitrise.yml
@@ -6,7 +6,7 @@ app:
   # An example secret param, define it (A_SECRET_PARAM) in .bitrise.secrets.yml
   - A_SECRET_PARAM: $A_SECRET_PARAM
   # If you want to share this step into a StepLib
-  - BITRISE_STEP_ID: dependency-checker
+  - BITRISE_STEP_ID: cocoapods-dependency-check
   - BITRISE_STEP_VERSION: "0.0.1"
   - BITRISE_STEP_GIT_CLONE_URL: https://github.com/johnjcsmith/bitrise-step-dependency-checker.git
   - MY_STEPLIB_REPO_FORK_GIT_URL: $MY_STEPLIB_REPO_FORK_GIT_URL
